--- a/index.html
+++ b/index.html
@@ -375,10 +375,10 @@ body{
       </article>
       <article class="text_img">
         <div class="text_area">
-          <h3 class="tit">텍스트와 이미지 패턴</h3>
+          <h3 class="tit">섬세한 색조의 신비로운 미스틱 컬러</h3>
           <p class="txt">
-            왼쪽은 텍스트 오른쪽은 이미지! :) CSS를 활용해 모션을 만들고 스크롤위치에 도착 했을때
-            등장하는 인터렉션을 구현해보세요. 공부가 목적이 아니라도 재밌는 수업이 될거라 믿습니다 :)
+            시대를 초월한 프리미엄을 제시할 두 가지 컬러를 소개합니다.
+무광의 미스틱 브론즈와 클래식한 유광의 미스틱 블랙 컬러는 고급스러운 색감으로 눈길을 사로잡습니다.
           </p>
         </div>
         <div class="img_area">
@@ -398,36 +398,36 @@ body{
           <div class="text_box">
             <div class="left">
               <p class="txt_com txt01">
-                <span>깡코딩 좋아요!</span>
+                <span>SAMSUNG GALAXY</span>
               </p>
             </div>
             <div class="right">
               <p class="txt_com txt01">
-                <span>깡코딩 좋아요!</span>
+                <span>SAMSUNG GALAXY</span>
               </p>
             </div>
           </div>
           <div class="text_box type02">
             <div class="left">
               <p class="txt_com txt01">
-                <span>수강생 화이팅!</span>
+                <span>SMART PHONE</span>
               </p>
             </div>
             <div class="right">
               <p class="txt_com txt01">
-                <span>수강생 화이팅!</span>
+                <span>SMART PHONE</span>
               </p>
             </div>
           </div>
           <div class="text_box type03">
             <div class="left">
               <p class="txt_com txt01">
-                <span>신난다 재미난다!</span>
+                <span>GALAXY FOLD 5G</span>
               </p>
             </div>
             <div class="right">
               <p class="txt_com txt01">
-                <span>신난다 재미난다!</span>
+                <span>GALAXY FOLD 5G</span>
               </p>
             </div>
           </div>
