--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-<title>삼성 갤럭시 폴w드</title>
+<title>삼성 갤럭시 폴드</title>
 <link rel="stylesheet" type="text/css" href="library/css/common.css">
 <link rel="stylesheet" type="text/css" href="library/css/fix_motion.css">
 <link rel="stylesheet" type="text/css" href="library/css/section_product.css">
